--- a/index.html
+++ b/index.html
@@ -14,8 +14,23 @@
     <body>
         <div id="root">
             <div class="container">
+
+                <div class="select-container">
+                    <div>
+                        <label for="select-genre">Genres</label>
+                        <select name="genres" id="select-genre" v-model="genre_selected">
+                            <option value="All">All</option>
+                            <option v-for="(genre, index) in genres_array" :value="genre">{{genre}}</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label for="sorting">Sort by Year: </label>
+                        <input type="checkbox" id="sorting" name="sort" value="true">
+                    </div>
+                </div>
+
                 <div class="cd-wrapper">
-                    <div class="cd-card" v-for="cd in cd_array">
+                    <div class="cd-card" v-for="cd in cd_array" v-if="genre_selected == cd.genre || genre_selected == 'All' ">
                         <div class="image-container">
                             <img :src="cd.poster" :alt="cd.poster" class="poster">
                         </div>
@@ -25,8 +40,11 @@
                         <div class="author-container">
                             <span class="author">{{cd.author}}</span>
                         </div>
+                        <div class="genre-container">
+                            <span class="genre">Genre: {{cd.genre}}</span>
+                        </div>
                         <div class="year-container">
-                            <span class="year">{{cd.year}}</span>
+                            <span class="year">Year: {{cd.year}}</span>
                         </div>
                     </div>
                 </div>
